# advent-of-code-solutions

./: .gitignore  README.md  flake.nix
2015/day-01/: Cargo.toml
2015/day-01/src/: helpers.rs  main.rs  tests.rs
2015/day-02/: Cargo.toml
2015/day-02/src/: main.rs  tests.rs
2023/day-01/: Cargo.toml  README.md
2023/day-01/src/: main.rs  tests.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: main.rs  tests.rs
2023/day-03/: Cargo.toml
2023/day-03/reddit-test-cases/: README.md
2023/day-03/src/: helper_wrappers.rs  main.rs  tests.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: main.rs  tests.rs
2023/day-05/: Cargo.toml
2023/day-06/: Cargo.toml
2023/day-07/: Cargo.toml
2023/day-08/: Cargo.toml
2023/day-09/: Cargo.toml
2023/day-10/: Cargo.toml
2023/day-11/: Cargo.toml
2023/day-12/: Cargo.toml
2023/day-13/: Cargo.toml
2023/day-14/: Cargo.toml  sample-input-rolled-east.txt  sample-input-rolled-south.txt  sample-input-rolled-west.txt
2023/day-15/: Cargo.toml
2023/day-16/: Cargo.toml
2023/day-17/: Cargo.toml
2023/day-18/src/: lib.rs  (+5 more)
2024/day-03/: Cargo.toml
2024/day-04/: Cargo.toml
2024/day-05/: Cargo.toml
2024/day-06/: Cargo.toml
2024/day-07/: Cargo.toml
2025/day-01/: Cargo.toml
2025/day-03/: Cargo.toml
2025/day-04/: Cargo.toml
2025/day-05/: Cargo.toml
2025/day-06/: Cargo.toml
2025/day-07/: Cargo.toml
2025/day-08/: Cargo.toml
2025/day-09/: Cargo.toml
2025/day-10/: Cargo.toml
2025/day-10/src/: main.rs  tests.rs
2025/day-11/: Cargo.toml
2025/day-12/: Cargo.toml
helpers/: Cargo.toml
helpers/src/: lib.rs
(+78 files in other folders)
